# bb

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dioxus.toml  LICENSE  README.md  agents.md  dist-workspace.toml  index.html  opencode.json  readme.md  skills-lock.json  styles.css  tailwind.css
.agents/skills/blooming-blockery-cli/: SKILL.md
.agents/skills/project-consolidation-rust-general/: SKILL.md
.agents/skills/project-consolidation-rust-iced/: SKILL.md
.codex/environments/: environment.toml
.github/workflows/: release-aur.yaml  release-macos-dmg.yaml  release-msi-wix.yaml  release-winget.yml  release.yml  rust.yml
assets/: actions.module.css  app.css  app.module.css  block.module.css  fonts.css  line.module.css  tailwind.css
assets/icons/: icon.icns  mk.sh
crates/store/: Cargo.toml
crates/store/src/: block.rs  drafts.rs  lib.rs  paths.rs  persist.rs  tests.rs  tree.rs
doc/: backlog.md  manifesto.bb  manifesto.md
docs/: action-bar.md  architecture.md  async-conflict-safety.md  backlog-2026-03-07.md  backlog.md  design-understanding.md  expansion-diff.md  i18n-wiring.md  keyboard.md  message-routing.md  mount-system.md  persistence.md  slotmap-migration.md  ui-component-extraction.md  undo-system.md
docs-codex/: DESIGN_KNOWLEDGE.md  ENGINEERING_KNOWLEDGE.md  FUNCTIONALITY.md  SUBSYSTEM_MAP.md
garden/iced/: Cargo.toml
garden/iced/src/: main.rs
garden/pdf/: Cargo.toml
garden/pdf/src/: main.rs
locales/: en-US.yml  ja.yml  zh-CN.yml
src/: app.rs  cli.rs  component.rs  config.rs  grammar.lalrpop  graph.rs  i18n.rs  lib.rs  llm.rs  main.rs  mount.rs  paths.rs  store.rs  text.rs  theme.rs  undo.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: action_bar.rs  archive_panel.rs  atomize.rs  block_panel_host.rs  config.rs  context_menu.rs  diff.rs  document.rs  document_toolbar.rs  document_top_right.rs  draft.rs  edit.rs  editor_buffers.rs  editor_store.rs  error.rs  error_banner.rs  expand.rs  find_panel.rs  friends_panel.rs  instruction_panel.rs  link_panel.rs  llm.rs  llm_requests.rs  mount_file.rs  mount_indicator.rs  multiselect.rs  navigation.rs  overlay.rs  patch.rs  patch_panel.rs  point_editor.rs  point_text_editor.rs  reduce.rs  reference_panel.rs  scroll.rs  settings.rs  shortcut.rs  shortcut_help_banner.rs  state.rs  structure.rs  (+2 more)
src/app/action_bar/: dispatch.rs  keyboard.rs  mod.rs  responsive.rs  selector.rs  types.rs
src/cli/: commands.rs  context.rs  draft.rs  execute.rs  fold.rs  friend.rs  mount.rs  nav.rs  output.rs  panel.rs  point.rs  query.rs  results.rs  tests.rs  tests_integration.rs  tests_simple.rs  tree.rs  types.rs
src/component/: breadcrumbs.rs  context_menu_button.rs  error_banner_view.rs  floating_panel.rs  friend_row.rs  icon_button.rs  patch_panel.rs  point_link_list.rs  point_text_editor.rs  reference_list_row.rs  reference_perspective.rs  reference_row.rs  shortcut_help_banner.rs  status_chip.rs  text_button.rs
src/llm/: client.rs  config.rs  context.rs  error.rs  prompt.rs
src/store/: block.rs  drafts.rs  markdown.rs  mount.rs  navigate.rs  persist.rs  point.rs  tests.rs  tree.rs
src/theme/: button_styles.rs  container_styles.rs  context_menu_styles.rs  editor_styles.rs  markdown_styles.rs  rule_styles.rs  text_styles.rs
ui/: Cargo.toml
ui/src/: lib.rs
wix/: main.wxs
