[package]
name = "blooming-blockery"
version = "0.0.10"
edition = "2024"
repository = "https://github.com/photonfoxlime/bb"
homepage = "https://github.com/photonfoxlime/bb"
license = "Apache-2.0"
authors = ["LitiaEeloo <litiaeeloo@gmail.com>"]
description = "A structured document editor for designers and developers."
default-run = "blooming-blockery"

[package.metadata.wix]
upgrade-guid = "94C63B44-F187-4646-978A-26AF57C4D6C9"
path-guid = "2928733B-C69F-4B07-AEF6-1366D623051A"
license = false
eula = false
product-icon = "assets/icons/icon.ico"

[features]
default = ["log"]
log = ["dep:tracing-subscriber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
directories = "6.0.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "1.0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], optional = true }
slotmap = { version = "1.1", features = ["serde"] }
lucide-icons = { version = "0.575.0", features = ["iced"] }
similar = "2.5"
rfd = "0.17.2"
dark-light = "2.0.0"
tokio = { version = "1", features = ["time"] }
rust-i18n = "3.1.5"
jieba-rs = "0.8"
unicode-segmentation = "1"
regex = "1"

[[bin]]
name = "bb"
path = "src/bin/bb.rs"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
