[package]
name = "bb-alas"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
iced.workspace = true
iced.features = ["async-std", "debug"]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "fast-rng", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std.workspace = true
directories-next = "2.0"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced.workspace = true
iced.features = ["debug", "webgl"]

uuid = { version = "1.0", features = ["js"] }
web-sys = { workspace = true, features = ["Window", "Storage"] }
wasmtimer.workspace = true

[package.metadata.deb]
assets = [
    ["target/release-opt/todos", "usr/bin/iced-todos", "755"],
    ["iced-todos.desktop", "usr/share/applications/", "644"],
]
